# IBTaxSP

./: .gitignore  README.md  pyproject.toml
IB/Reports/: README.md
IB/Tax/: README.md
scripts/: print_overview.py
src/ibtaxsp/: __init__.py  main.py  models.py  repository.py  service.py
src/ibtaxsp/services/: __init__.py  annual_tax.py  cash_flow_view.py  fifo_engine.py  flex_parser.py  hacienda_view.py  i18n.py  renta_guidance.py  renta_view.py  simulation.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  style.css
